--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<!-- Using datatable css and bootstrap css creates conflicts -->
 	<!-- <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css"> -->
 	<link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css">
+	<link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.6.1/css/buttons.dataTables.min.css">
 	<link rel="stylesheet" href="style.css">
 </head>
 
@@ -45,7 +46,7 @@
 								<label id="label-year" for="country" class="col-sm-3 col-form-label text-right">Year</label>
 								<div id="div-year" class="col-sm-5">
 									<select id="year" class="form-control form-control-sm" disabled>
-										<option value="">Current year</option>
+										<option value="">Select a year</option>
 									</select>
 								</div>
 								<img id="year-loader" src="loader.gif" alt="loader">
