--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="A mobile responsive web tool for obtaining holiday records by country and by year and displaying the information in a datatable. Technologies used: HTML, CSS, JavaScript, Bootstrap, JQuery, DataTables, AJAX, Web Scraping">
+	<meta name="description" content="A mobile responsive web tool for obtaining holiday records by country and year; displaying the information in a datatable. Technologies used: HTML, CSS, PHP, JavaScript, REST API, Bootstrap, jQuery, DataTables, AJAX">
 
-	<title>Holiday Web Scraper</title>
+	<title>Country Holidays</title>
 
-    <link rel="icon" href="fav-icon.png">
+	<link rel="icon" href="fav-icon.png">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
 	<!-- Using datatable css and bootstrap css creates conflicts -->
@@ -23,20 +23,20 @@
 		<div class="row">
 			<div class="col-lg-6">
 				<div id="card-form" class="card">
-					<div class="card-header bg-info">Query Builder</div>
+					<div class="card-header bg-info">Country Holidays</div>
 					<div class="card-body px-3 py-5">
 						<form>
 							<div class="form-group row">
-								<label for="website" class="col-sm-3 col-form-label text-right">Website</label>
+								<label for="website" class="col-sm-3 col-form-label text-right">API URL</label>
 								<div class="col-sm-9">
-									<input type="text" id="website" class="form-control form-control-sm" value="https://www.officeholidays.com" readonly>
+									<input type="text" id="website" class="form-control form-control-sm" value="https://calendarific.com/api/v2" readonly>
 								</div>
 							</div>
 							<div class="form-group row">
 								<label for="country" class="col-sm-3 col-form-label text-right">Country</label>
 								<div class="col-sm-7">
 									<select id="country" class="form-control form-control-sm" disabled required>
-										<option value="">Choose a country</option>
+										<option value="">Select a country</option>
 									</select>
 								</div>
 								<img id="country-loader" src="loader.gif" alt="loader">
@@ -48,7 +48,7 @@
 										<option value="">Select a year</option>
 									</select>
 								</div>
-								<img id="year-loader" src="loader.gif" alt="loader">
+								<!--<img id="year-loader" src="loader.gif" alt="loader">-->
 							</div>
 
 							<div class="text-right">
