--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<div id="table-caption">No data to display.</div>
 				<div id="regional-div">
 					<input type="checkbox" name="regional" id="regional">
-					<label class="form-check-label" for="regional">Show regional holidays</label>
+					<label class="form-check-label" for="regional">Show common local holidays</label>
 				</div>
 				<table id="holiday-table" class="table table-striped table-bordered table-hover table-responsive table-sm"></table>
 			</div>
